# ChangeLog for media-fonts/font-adobe-75dpi
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/media-fonts/font-adobe-75dpi/ChangeLog,v 1.25 2006/07/19 14:06:05 gmsoft Exp $

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> font-adobe-75dpi-1.0.0.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  font-adobe-75dpi-1.0.0.ebuild:
  Mark 75dpi-1.0.0 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  font-adobe-75dpi-1.0.0.ebuild:
  ppc/sparc/mips/alpha/arm/sh stable

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  font-adobe-75dpi-1.0.0.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org>
  font-adobe-75dpi-1.0.0.ebuild:
  Stable on ppc64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  font-adobe-75dpi-1.0.0.ebuild:
  x86 stable.

  04 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  font-adobe-75dpi-1.0.0.ebuild:
  (#133980) Add a real description (Max Lorenz).

  28 Apr 2006; Marien Zwart <marienz@gentoo.org> Manifest:
  Fixing SHA256 digest, pass four

  31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  font-adobe-75dpi-1.0.0.ebuild:
  Add ~x86-fbsd keyword.

  24 Mar 2006; Donnie Berkholz <spyderous@gentoo.org>;
  font-adobe-75dpi-1.0.0.ebuild:
  Regularize RESTRICT syntax with all the others for easier scripting later on.

  23 Mar 2006; Donnie Berkholz <spyderous@gentoo.org>;
  font-adobe-75dpi-1.0.0.ebuild:
  (#127306) Fix digest, it changed upstream. RESTRICT=mirror until this
  propogates.

  23 Mar 2006; Donnie Berkholz <spyderous@gentoo.org>;
  font-adobe-75dpi-1.0.0.ebuild:
  Some keywords got missed.

  14 Feb 2006; Markus Rothe <corsair@gentoo.org>
  font-adobe-75dpi-1.0.0.ebuild:
  Added ~ppc64

  10 Jan 2006; Michael Hanselmann <hansmi@gentoo.org>
  font-adobe-75dpi-1.0.0.ebuild:
  Added to ~hppa, ~ppc.

*font-adobe-75dpi-1.0.0 (18 Dec 2005)
