@@ -1,12 +1,12 @@
 DIST font-adobe-75dpi-1.0.0.tar.bz2 846752 RMD160 348e233516806415e2e190ec4af7ea09f5d33fb9 SHA1 5387bb3bfbff96f8d6928aada8025144179f1549 SHA256 d62745bee0f5e4f355f237020667d783ae9fea5f18a864d748ae1287bd176339
-EBUILD font-adobe-75dpi-1.0.0.ebuild 607 RMD160 68d23ab6cca57f720be7c928a294bef78de0b838 SHA1 c457a6f9000585b55e588943151c7bfa8af90dd8 SHA256 69c50c7c57773d975461b7ab4755494fe2964fb0f7e288c2da32eca56b371440
-MD5 cd0a762e7948cb2f43c95b775c5a596b font-adobe-75dpi-1.0.0.ebuild 607
-RMD160 68d23ab6cca57f720be7c928a294bef78de0b838 font-adobe-75dpi-1.0.0.ebuild 607
-SHA256 69c50c7c57773d975461b7ab4755494fe2964fb0f7e288c2da32eca56b371440 font-adobe-75dpi-1.0.0.ebuild 607
-MISC ChangeLog 3568 RMD160 055f57bf6c37da95132c8119be485b3200beaa0c SHA1 e736d3487fd12db96953219ac41e74b8b9fe6654 SHA256 5c2eeb3c12706956ccbf580f60f20a8734b4917a4dac8cdee95efd505e8bf1f0
-MD5 2d8aaa135b79b9a0bd4653978d36b83f ChangeLog 3568
-RMD160 055f57bf6c37da95132c8119be485b3200beaa0c ChangeLog 3568
-SHA256 5c2eeb3c12706956ccbf580f60f20a8734b4917a4dac8cdee95efd505e8bf1f0 ChangeLog 3568
+EBUILD font-adobe-75dpi-1.0.0.ebuild 573 RMD160 438bf55d0f22a66e06fc856b69870d59d713c288 SHA1 cd3ed778e66a6c80fc20565a0ab04a73a4fb0cf6 SHA256 38b98591a3dd7bc52cb51c3e3521d0f7df337273ac919b09c003752fadf1c1fb
+MD5 7852585497cb47f75039dc8a9ae91ab8 font-adobe-75dpi-1.0.0.ebuild 573
+RMD160 438bf55d0f22a66e06fc856b69870d59d713c288 font-adobe-75dpi-1.0.0.ebuild 573
+SHA256 38b98591a3dd7bc52cb51c3e3521d0f7df337273ac919b09c003752fadf1c1fb font-adobe-75dpi-1.0.0.ebuild 573
+MISC ChangeLog 3709 RMD160 68405a9c603deb62972782f17d68a7fbf41e07b2 SHA1 2cef98f86d4252b03f7a422d0debcf2fbc866331 SHA256 cb5eed519c6f1c83ee6f494e6d7ec537e0a40840604b7fa5bc838e8fcf80d468
+MD5 092e83b43678005b07fca343d21963fa ChangeLog 3709
+RMD160 68405a9c603deb62972782f17d68a7fbf41e07b2 ChangeLog 3709
+SHA256 cb5eed519c6f1c83ee6f494e6d7ec537e0a40840604b7fa5bc838e8fcf80d468 ChangeLog 3709
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
 MD5 a37bab73e2f24b213932c30997d3d360 metadata.xml 156
 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 metadata.xml 156
